--- a/common.properties
+++ b/common.properties
@@ -1,5 +1,5 @@
-kotlin_version=1.6.10
-version=1.0.0
+kotlin_version=1.7.0
+version=1.1.0-SNAPSHOT
 group_id=com.welltech
 runtime_artifact=recomposition-logger-runtime
 annotations_artifact=recomposition-logger-annotations
