--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
     ext{
-        kotlin_version = '1.6.10'
-        compose_version = '1.1.1'
+        kotlin_version = '1.7.0'
+        compose_version = '1.2.0'
+        compose_compiler_version = '1.2.0'
     }
 
     repositories {
@@ -10,9 +11,9 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.welltech:recomposition-logger-plugin:1.0.0'
+        classpath 'com.welltech:recomposition-logger-plugin:1.1.0'
     }
 }
 
@@ -27,12 +28,12 @@ repositories {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.welltech.recomposition_logger_sample"
         minSdk 26
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -62,7 +63,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion compose_compiler_version
     }
 }
 
