--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,7 @@
 name: Release
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # Triggers the workflow on push events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
@@ -23,11 +22,19 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo test pipeline
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run a multi-line script for debug
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          ls -lah
+          printenv
+
+#      # Runs a set of commands using the runners shell
+#      - name: Run a multi-line script
+#        run: |
+#          echo Add other actions to build,
+#          echo test, and deploy your project.
+
+      - shell: bash
+        env:
+          SUPER_SECRET: ${{ secrets.TEST }}
+        run: |
+          echo "$TEST"
