--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,24 +44,32 @@ jobs:
           echo "TAG_NAME=$( (grep -w "version" | cut -d= -f2) <common.properties)" >> $GITHUB_OUTPUT
         id: version
 
+#      - name: debug
+#        run: |
+#          cat CHANGELOG.md
+#        id: debug
+
+      - name: Retrieve the release body
+        run: |
+          GITHUB_RELEASE_BODY=$(cat CHANGELOG.md | tr '\n' ';;' |  grep -oE "\#{1,2}\ *$TAG_NAME[^\#]*(\#|\Z)" | tr ';;' '\n' | sed '/^#/d' | tr -d '-' | sed 's/ //')
+          echo "::set-output name=content::$GITHUB_RELEASE_BODY"
+        id: gitHubReleaseBody
+        env:
+          TAG_NAME: ${{ steps.version.outputs.TAG_NAME }}
+
+
       - name: debug
         run: |
-          cat CHANGELOG.md
+          echo $GITHUB_RELEASE_BODY
         id: debug
-
-#      - name: Retrieve the release body
-#        run: |
-#          GITHUB_RELEASE_BODY=$(cat CHANGELOG.md | tr '\n' ';;' |  grep -oE "\#{1,2}\ *$TAG_NAME[^\#]*(\#|\Z)" | tr ';;' '\n' | sed '/^#/d' | tr -d '-' | sed 's/ //')
-#          echo "::set-output name=content::$GITHUB_RELEASE_BODY"
-#        id: gitHubReleaseBody
-#        env:
-#          TAG_NAME: ${{ steps.version.outputs.TAG_NAME }}
+        env:
+          TAG_NAME: ${{ steps.version.outputs.GITHUB_RELEASE_BODY }}
 
       - name: Create GitHub Release
         uses: ncipollo/release-action@v1
         with:
           tag: "v${{ steps.version.outputs.TAG_NAME }}"
           name: "v${{ steps.version.outputs.TAG_NAME }}"
-#          body: "${{ steps.gitHubReleaseBody.outputs.GITHUB_RELEASE_BODY }}"
-          bodyFile: "CHANGELOG.md"
+          body: "${{ steps.gitHubReleaseBody.outputs.GITHUB_RELEASE_BODY }}"
+#          bodyFile: "CHANGELOG.md"
 #          omitBody: true
