final testing of the pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,20 +49,20 @@ jobs:
 #          cat CHANGELOG.md
 #        id: debug
 
-#      - name: Retrieve the release body
-#        run: |
-#          GITHUB_RELEASE_BODY=$(cat CHANGELOG.md | tr '\n' ';;' |  grep -oE "\#{1,2}\ *$TAG_NAME[^\#]*(\#|\Z)" | tr ';;' '\n' | sed '/^#/d' | tr -d '-' | sed 's/ //')
-#          echo "::set-output name=content::$GITHUB_RELEASE_BODY"
-#        id: gitHubReleaseBody
-#        env:
-#          TAG_NAME: ${{ steps.version.outputs.TAG_NAME }}
-
       - name: Retrieve the release body
         run: |
-          echo "GITHUB_RELEASE_BODY=$(cat CHANGELOG.md | tr '\n' ';;' |  grep -oE "\#{1,2}\ *$TAG_NAME[^\#]*(\#|\Z)" | tr ';;' '\n' | sed '/^#/d' | tr -d '-' | sed 's/ //')" >> $GITHUB_OUTPUT
+          GITHUB_RELEASE_BODY=$(cat CHANGELOG.md | tr '\n' ';;' |  grep -oE "\#{1,2}\ *$TAG_NAME[^\#]*(\#|\Z)" | tr ';;' '\n' | sed '/^#/d' | tr -d '-' | sed 's/ //')
+          echo "::set-output name=content::$GITHUB_RELEASE_BODY"
         id: gitHubReleaseBody
         env:
           TAG_NAME: ${{ steps.version.outputs.TAG_NAME }}
+
+#      - name: Retrieve the release body
+#        run: |
+#          echo "GITHUB_RELEASE_BODY=$(cat CHANGELOG.md | tr '\n' ';;' |  grep -oE "\#{1,2}\ *$TAG_NAME[^\#]*(\#|\Z)" | tr ';;' '\n' | sed '/^#/d' | tr -d '-' | sed 's/ //')" >> $GITHUB_OUTPUT
+#        id: gitHubReleaseBody
+#        env:
+#          TAG_NAME: ${{ steps.version.outputs.TAG_NAME }}
 
       - name: debug
         run: |
