--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,7 @@
 name: appRelease
 
 on:
+  # Triggers the workflow on push events but only for the "main" branch
   push:
     branches: [ "main" ]
   workflow_dispatch:
