--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext{
-        kotlin_version = '1.7.0'
-        compose_version = '1.2.0'
-        compose_compiler_version = '1.2.0'
+        kotlin_version = '1.8.0'
+        compose_bom_version = '2023.01.00'
+        compose_compiler_version = '1.4.0'
     }
 
     repositories {
@@ -13,7 +13,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.welltech:recomposition-logger-plugin:1.1.0'
+        classpath 'com.welltech:recomposition-logger-plugin:1.3.0'
     }
 }
 
@@ -28,12 +28,12 @@ repositories {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.welltech.recomposition_logger_sample"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -68,19 +68,22 @@ android {
 }
 
 recompositionLogger {
+    enabled = true
     tag = "SampleRecomposition" // tag for recomposition logs
+    logFile = projectDir
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'com.google.android.material:material:1.8.0'
 
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation "androidx.compose.foundation:foundation:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
+    implementation platform("androidx.compose:compose-bom:$compose_bom_version")
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-tooling"
+    implementation "androidx.compose.foundation:foundation"
+    implementation "androidx.compose.material:material"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
