--- a/common.properties
+++ b/common.properties
@@ -1,5 +1,5 @@
-kotlin_version=1.8.20
-version=1.6.0-alpha01
+kotlin_version=1.8.21
+version=1.6.0
 group_id=com.welltech
 runtime_artifact=recomposition-logger-runtime
 annotations_artifact=recomposition-logger-annotations
