--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext{
-        kotlin_version = '1.8.20'
-        compose_bom_version = '2023.04.01'
-        compose_compiler_version = '1.4.7'
+        kotlin_version = '1.9.10'
+        compose_bom_version = '2023.10.00'
+        compose_compiler_version = '1.5.3'
     }
 
     repositories {
@@ -11,9 +11,9 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:8.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.welltech:recomposition-logger-plugin:1.6.0-alpha01'
+        classpath 'com.welltech:recomposition-logger-plugin:1.7.1'
     }
 }
 
@@ -28,12 +28,12 @@ repositories {
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.welltech.recomposition_logger_sample"
         minSdk 26
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -65,6 +65,7 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion compose_compiler_version
     }
+    namespace 'com.welltech.recomposition_logger_sample'
 }
 
 recompositionLogger {
